# GoogleHomeTalkApp

./: README.md  pyproject.toml
.github/workflows/: main.yml
src/: app.py  only_llm_run.py
