[tool.poetry]
name = "google home talk app"
version = "0.1.0"
description = ""
authors = ["i13abe <i13abemotoshi@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
click = "8.1.7"
transformers = "^4.41.2"
huggingface-hub = "^0.23.3"
torch = {version = "^2.3.1+cu121", source = "torch_cu121"}
torchvision = {version = "^0.18.1+cu121", source = "torch_cu121"}
torchaudio = {version = "^2.3.1+cu121", source = "torch_cu121"}
accelerate = "^0.31.0"
bitsandbytes = "^0.43.1"
black = "22.3.0"
flask = "^3.0.3"

[tool.poetry.dev-dependencies]
pysen = {version = "^0.10.2", extras = ["lint"]}

[[tool.poetry.source]]
name = "torch_cu121"
url = "https://download.pytorch.org/whl/cu121"
priority = "explicit"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

# pysen version
[tool.pysen]
version = "0.10"

# pysen lint 設定
[tool.pysen.lint]
enable_black = true
enable_flake8 = true
enable_isort = true
enable_mypy = true
mypy_preset = "entry"
line_length = 100
py_version = "py38"

# mypy target設定
[[tool.pysen.lint.mypy_targets]]
  paths = ["."]

# lint 対象path設定
[tool.pysen.lint.source]
includes = [
  ".",
]
# 無視するフォルダー
excludes = [
  "./python_template/__init__.py",
  "./python_template/"
]

# pytest設定
[tool.pytest.ini_options]
testpaths = ["tests"]